--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    <link
+      href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:300,400,600"
+      rel="stylesheet"
+    />
     <link rel="icon" href="favicon.png" sizes="16x16" type="image/png" />
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css" />
@@ -7,9 +11,6 @@
   </head>
   <body>
     <div class="content">
-      <div class="title">
-        <img src="cm.jpg" />
-      </div>
       <h1>
         Plan 9 Operating System Notes
       </h1>
