--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   </head>
   <body>
     <div class="content">
+      <div class="title">
+        <img src="cm.jpg" />
+      </div>
       <h1>
         Plan 9 Operating System Notes
       </h1>
