adding link to website

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         My descent into plan 9
       </h2>
       <h3>
-        Richard Anaya
+        <a href="http://www.richardanaya.com/">Richard Anaya</a>
       </h3>
       <p>
         Plan 9 is an <a href="#">operating system</a> with strong emphasis on
