--- a/index.html
+++ b/index.html
@@ -11,31 +11,13 @@
   </head>
   <body>
     <div class="content">
-      <h1>
-        Plan 9 Operating System Notes
-      </h1>
-      <h2>
-        My descent into plan 9
-      </h2>
-      <h3>
-        <a href="http://www.richardanaya.com/">Richard Anaya</a>
-      </h3>
-      <p>
-        Plan 9 is an <a href="#">operating system</a> with strong emphasis on
-        files.
-      </p>
-      <pre class="prettyprint">
-#include "hey"
-
-void main(){
-  printf("Hello World!");
-}
-</pre
-      >
+      <h1>Code Meditations</h1>
+      <h2>Reflections on interacting with machines</h2>
+      <h3><a href="http://www.richardanaya.com/">Richard Anaya</a></h3>
       <ul>
-        <li>foo</li>
-        <li>bar</li>
-        <li>go</li>
+        <li>
+          April 17th 2019 - <a href="articles/vim.html">Yearnings in VIM</a>
+        </li>
       </ul>
     </div>
   </body>
