--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h3><a href="http://www.richardanaya.com/">Richard Anaya</a></h3>
       <ul>
         <li>
-          April 17th 2019 - <a href="articles/vim.html">Yearnings in VIM</a>
+          April 17th 2019 - <a href="articles/vim.html">VIM: all roads lead to the CLI</a>
         </li>
       </ul>
     </div>
