--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+	  <meta name="viewport" content="width=320, initial-scale=1">
     <link
       href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:200,400,600"
       rel="stylesheet"
